[gd_scene load_steps=2 format=3 uid="uid://ba0jriq1p4snr"]

[ext_resource type="Script" path="res://scripts/menus/game_over_menu.gd" id="1_ces76"]

[node name="game_over_menu" type="CanvasLayer"]
script = ExtResource("1_ces76")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 400

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "Game Paused"
fit_content = true
scroll_active = false

[node name="PauseMenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions"]
layout_mode = 2
text = "Continue"

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions"]
layout_mode = 2
text = "Main Menu"

[node name="LoadGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions"]
layout_mode = 2
text = "Load Game"

[node name="ExitGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/PauseMenuOptions/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
